--- a/issue.html
+++ b/issue.html
@@ -6,13 +6,109 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" media="screen"
     href="./main.css" />
+    <style>
+        .featured {
+            height: 310px;
+            background-color: black;
+            position: relative;
+            background-image: url("img/issue-1.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+
+        .count {
+            position: absolute;
+            top: 30px;
+            right: 26px;
+        }
+
+        .text-area {
+            position: absolute;
+            bottom: 36px;
+            left: 24px;
+        }
+
+        .featured .title {
+            margin-bottom: 12px;
+        }
+
+        sup {
+            font-size: 10px;
+        }
+
+        .swiper {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding: 24px;
+        }
+
+        .swiper li {
+            width: 136px;
+            height: 80px;
+            background-size: cover;
+            background-position: center;
+            display: inline-block;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        .swiper li:nth-child(1) {
+            background-image: url("img/issue-2.jpg");
+        }
+
+        .swiper li:nth-child(2) {
+            background-image: url("img/issue-3.jpg");
+        }
+
+        .swiper li:nth-child(3) {
+            background-image: url("img/issue-4.jpg");
+        }
+
+        .list {
+            padding: 24px;
+        }
+
+        .item {
+            margin-top: 17px;
+            margin-bottom: 20px;
+        }
+
+        /* 리스트 시작 */
+        .item .num {
+            width: 26px;
+            height: 26px;
+            background-color: #ffe6cf;
+            color: #485762;
+            border-radius: 50%;
+            padding: 5px 10px;
+            box-sizing: border-box;
+            display: inline-block;
+            margin-right: 20px;
+            position: relative;
+            top: -18px;
+        }
+        /* 리스트 설명 */
+        .item .infos {
+            display: inline-block;
+            width: 80%;
+        }
+
+        .item .title {
+            font-size: 17px;
+        }
+
+        .item .desc {
+            font-size: 13px;
+            opacity: 0.7;
+        }
+    </style>
 </head>
 <body>
     <div class="featured">
-        <div class="count">8</div>
-        <div class="text=area">
+        <h1 class="count">8</h1>
+        <div class="text-area">
             <h1 class="title">
-                Issues 1
+                Issues <sup>1</sup>
             </h1>
             <p>
                 we' ll make a mobile magazine <br>
@@ -21,15 +117,43 @@
         </div>
     </div>
 
-    <div class="swiper">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-    </div>
+    <ul class="swiper">
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 
-    <div class="list">
-        <div class="circle">1</div>
-        <div class=
-    </div>
+    <ul class="list">
+        <li class="item">
+            <div class="num">1</div>
+            <div  class="infos">
+                <div class="title">Hello World</div>
+                <div class="desc">
+                    Larem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="num">2</div>
+            <div  class="infos">
+                <div class="title">Hello World</div>
+                <div class="desc">
+                    Larem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="num">3</div>
+            <div class="infos">
+                <div class="title">Hello World</div>
+                <div class="desc">
+                    Larem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                </div>
+            </div>
+        </li>
+    </ul>
 </body>
 </html>
