--- a/like.html
+++ b/like.html
@@ -72,6 +72,8 @@
         }
 
         .list .item {
+            background-color: red;
+            display: inline-block;
             background-size: cover;
             background-position: center;
             border-radius: 5px;
@@ -126,20 +128,5 @@
         <li class="item"></li>
         <li class="item"></li>
     </ul>
-
-    <nav class="gnb">
-        <a href="index.html" class="cover mouse-effect">
-            <img src="img/icon/cover.svg">
-        </a>
-        <a href="issue.html" class="issue mouse-effect">
-            <img src="img/icon/issue.svg">
-        </a>
-        <a href="like.html" class="like mouse-effect active">
-            <img src="img/icon/like.svg">
-        </a>
-        <a href="mypage.html" class="mypage mouse-effect">
-            <img src="img/icon/more.svg">
-        </a>
-    </nav>
 </body>
 </html>
