--- a/mypage.html
+++ b/mypage.html
@@ -19,8 +19,6 @@
             width: 92px;
             height: 92px;
             border-radius: 50%;
-            box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.1), 
-                0 12px 24px 0 rgba(0, 0, 0, 0.24);
         }
 
         header .thumb-wrapper {
@@ -34,10 +32,10 @@
             height: 28px;
             font-size: 12px;
             position: absolute;
-            background-color: #FF5500;
+            background-color: red;
             border-radius: 50%;
             top: 0;
-            right: -8px;
+            right: 0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -52,9 +50,8 @@
             background-color: rgba(0, 0, 0, 0.05);
             display: inline-block;
             border-radius: 20px;
-            /* border: 1px solid rgba(0, 0, 0, 0.08); */
-            box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08);
-            /* box-sizing: border-box; */
+            border: 1px solid rgba(0, 0, 0, 0.08);
+            box-sizing: border-box;
             margin-top: 18px;
         }
 
@@ -91,7 +88,6 @@
         .list .item .right img {
             padding-right: 14px;
         }
-
     </style>
 </head>
 <body>
@@ -109,11 +105,11 @@
             </div>
         </div>
 
-        <div class="mail mouse-effect"><a href="mailto:gkswl412@naver.com">gkswl412@naver.com</a></div>
+        <div class="mail">gkswl412@naver.com</div>
     </header>
 
     <ul class="list">
-        <li class="item mouse-effect">
+        <li class="item">
             <div class="left">
                 <img src="img/icon/bookmark.svg">
                 <div class="name">Bookmark</div>
@@ -123,7 +119,7 @@
             </div>
         </li>
 
-        <li class="item mouse-effect">
+        <li class="item">
             <div class="left">
                 <img src="img/icon/account.svg">
                 <div class="name">Account info</div>
@@ -133,7 +129,7 @@
             </div>
         </li>
 
-        <li class="item mouse-effect">
+        <li class="item">
             <div class="left">
                 <img src="img/icon/business.svg">
                 <div class="name">Business</div>
@@ -143,7 +139,7 @@
             </div>
         </li>
 
-        <li class="item mouse-effect">
+        <li class="item">
             <div class="left">
                 <img src="img/icon/puzzle.svg">
                 <div class="name">blah blah</div>
@@ -153,20 +149,5 @@
             </div>
         </li>
     </ul>
-
-    <nav class="gnb">
-        <a href="index.html" class="cover mouse-effect">
-            <img src="img/icon/cover.svg">
-        </a>
-        <a href="issue.html" class="issue mouse-effect">
-            <img src="img/icon/issue.svg">
-        </a>
-        <a href="like.html" class="like mouse-effect">
-            <img src="img/icon/like.svg">
-        </a>
-        <a href="mypage.html" class="mypage mouse-effect active">
-            <img src="img/icon/more.svg">
-        </a>
-    </nav>
 </body>
 </html>
