--- a/happy.html
+++ b/happy.html
@@ -9,5 +9,8 @@
 	브랜치란: 기존 내용을 유지한 채 새로운 내용을 추가하고 싶을때 사용한다.
 	체크아웃: 특정 브랜치(혹은 커밋)으로 돌아가고 싶을때 사용
 	소스트리의 체크아웃 방법: 브랜치 이름을 더블 클릭하는 것 만으로 체크아웃 가능
+	
+	그대 추억하기 보다 기다리는게 부서진 내 맘이 더 아파와 다시 누군가를 만나서 결국 우리 사랑 
+	지워내도 행복했던것만 기억에 남아 
 </body>
 </html>
