happy.html에 이승철-긴 하루 가사 추가
충돌없는 fast-forward 이다. 가장 해피한 상황 머지(merge,병합) 하자

--- a/happy.html
+++ b/happy.html
@@ -17,5 +17,10 @@
 	나는 행복해~ 널 사아라앙해 널 나에게 준 이 세상 끝까지~ 너를 사랑해~ 영원히~ 변하지 않을
 	지금 이이대애로오
 	
+	진짜 좋은 노래는 이승철 노래지
+	뒤척이며 잠에서 깨어 문득 그대가 없다는 생각에 내 머리맡에 걸어놓은 그대의 사진 보며 이렇게 또 하루
+	시작되네요. 끝인가요? 후회만 남은 사랑 처음으로 돌아갈순 없나요? 뒤돌아봐요 휘청거리는 내 인생을
+	가눌수 없는 내마음도 모두 가져갈순 없나요. 편안하길 바란다구요.. 나의 편안함은 바로 그대죠..
+	
 </body>
 </html>
