happy.html 이승철 노래 가사 또 추가
좋다 좋아

--- a/happy.html
+++ b/happy.html
@@ -22,5 +22,8 @@
 	시작되네요. 끝인가요? 후회만 남은 사랑 처음으로 돌아갈순 없나요? 뒤돌아봐요 휘청거리는 내 인생을
 	가눌수 없는 내마음도 모두 가져갈순 없나요. 편안하길 바란다구요.. 나의 편안함은 바로 그대죠..
 	
+	사랑이란 그말은 못해도 먼곳에서 이렇게 바라만 보아도~ 모든 걸 줄 수 있어서어어어 사랑할수 있어서어어 난 
+	슬퍼도 해앵보옥 하압니다아아아
+	
 </body>
 </html>
